--- a/css/chasm.css
+++ b/css/chasm.css
@@ -547,9 +547,17 @@ ul.horizontal li{
     }
 }
 
+
+.margin_tienda{
+    margin-left: 8%;
+}
+
+.listas_tienda{
+    margin-left: 25%;
+}
+
 /*
 FIn de imagenes----------------
  */
-
 
 
